# rust_template

./: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel
.github/workflows/: test.yml
foo/: Cargo.toml
foo/src/: lib.rs  main.rs
