load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load("@crates//:defs.bzl", "all_crate_deps")

rust_library(
    name = "lib",
    srcs = glob(["src/**/*.rs"], exclude = ["src/main.rs"]),
    compile_data = ["Cargo.toml"],
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True),
)

rust_test(
    name = "lib_test",
    crate = ":lib",
)

rust_binary(
    name = "main",
    srcs = ["src/main.rs"],
    compile_data = ["Cargo.toml"],
    edition = "2021",
    deps = [":lib"] + all_crate_deps(normal = True),
)

rust_test(
    name = "main_test",
    crate = ":main",
)
