[workspace]
members = ["foo"]
resolver = "2"

# Add new crates as workspace.dependencies here. Submodules reference them
# with `{ workspace = true }` in their own Cargo.toml instead of duplicating
# version constraints.
[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
